examples/compiler_errors/adversarial/common_dev_mistakes/CollectionsConfusion.flx
// expect: compile_error
// expect-error: E300

module CollectionsConfusion {
    fn sum(xs: List<Int>) -> Int {
        len(xs)
    }

    fn bad() -> Int {
        sum([|1, 2, 3|])
    }
}
